test/samples/error/err_ret_type.w
func f():float {
  return 34
}