test/samples/error/err_ret_type.output
error: line 2:2 invalid return type int, float was expected